--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "apollo-angular": "^5.0.2",
     "graphql": "^16.8.1",
     "rxjs": "~7.8.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
