--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.2",
     "joi": "^17.11.0",
     "mongoose": "^7.6.3",
     "reflect-metadata": "^0.1.13",
